@@ -38,6 +38,7 @@ public:
   static bool FileExists(const CStdString& strFileName);
   static void GetDirectory(const CStdString& strFilePath, CStdString& strDirectoryPath);
   static void GetThumbnail(const CStdString& strFileName, CStdString& strThumb);
+  static void GetCachedThumbnail(const CStdString& strFileName, CStdString& strCachedThumb);
   static void GetFileSize(__int64 dwFileSize, CStdString& strFileSize);
   static void GetDate(SYSTEMTIME stTime, CStdString& strDateTime);
   static void GetHomePath(CStdString& strPath);
